proyecto1_G34/k8s/sub-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sub-redis
  namespace: p1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub-redis
  template:
    metadata:
      labels:
        app: sub-redis
    spec:
      containers:
      - name: sub-redis
        image: gerson7w7/sub_proyecto1
        resources:
          limits:
            memory: "1Gi"
            cpu: "100m"
