proyecto1_G34/k8s/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - port: 5000        # Puerto del servicio
    targetPort: 5000  # Puerto de la applicacion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: gerson7w7/api_proyecto1
        resources:
          limits:
            memory: "2Gi"
            cpu: "100m"
        ports:
        - containerPort: 5000
