proyecto1_G34/k8s/grpc-client.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client-svc
spec:
  type: LoadBalancer
  selector:
    app: grpc-client
  ports:
  - port: 4000        # Puerto del servicio
    targetPort: 4000  # Puerto de la applicacion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client
        image: gerson7w7/grpc-client_proyecto1
        resources:
          limits:
            memory: "2Gi"
            cpu: "100m"
        ports:
        - containerPort: 4000
