proyecto1_G34/k8s/mysql.yaml
---
# servicio para conectarse entre pods y fuera de los mismos
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
  - port: 3306        # Puerto del servicio
    targetPort: 3306  # Puerto de la applicacion
---
# deployment para desplegar nuestros pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      # uso de volumen
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      # contenedores del pod
      containers:
      - name: database
        image: gerson7w7/mysql_proyecto1
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m" # 1/2 CPU
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
