proyecto1_G34/k8s/redis.yaml
---
# servicio para conectarse entre pods y fuera de los mismos
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379        # Puerto del servicio
    targetPort: 6379  # Puerto de la applicacion
---
# deployment para desplegar nuestros pods
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      # contenedores del pod
      containers:
      - name: redis
        image: gerson7w7/redis_proyecto1
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m" # 1/2 CPU
        ports:
        - containerPort: 6379
